force-app/main/default/objects/custom_create279__c/custom_create279__c.object-meta.xml
<CustomObject>
    <label>Custom created object279</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects279</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>