force-app/main/default/objects/custom_create279__c/fields/custom_create_279field538__c.field-meta.xml
<CustomField>
    <fullName>custom_create_279field538__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 279field538</label>
    <type>Checkbox</type>
</CustomField>